fixed ant_opts to remove maxpermsize which is no longer supported on java 8.